# ATRI_bot

./: .env.prod  README.md  bot.py  pyproject.toml
src/plugins/atri_help/: __init__.py
